@@ -186,7 +186,7 @@ AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h malloc.h netdb.h \
 		  netinet/in.h stddef.h sys/file.h sys/param.h \
 		  sys/socket.h sys/time.h sys/ioctl.h sys/mount.h \
-                  sys/vfs.h sys/statfs.h syslog.h termios.h err.h \
+                  sys/vfs.h sys/statfs.h sys/statvfs.h syslog.h termios.h err.h \
                   sys/poll.h])
 
 
